# UX-Key-PFE

./: .gitignore  AUDIT.md  AUDIT_INDEX.md  CONTRIBUTING.md  DEBUGGING.md  DELIVERY_PACKAGE.md  DL_IMPROVEMENTS.md  EXECUTIVE_SUMMARY.md  PRESENTATION.md  PROJECT_HEALTH.md  QUICK_FIXES.md  README.md  START_HERE.md  STRUCTURE_MAP.md  pyproject.toml  scale.py  submit-slurm.py
config/: config-supervised.yaml  config-vae.yaml
config/supervised/: config-supervised-FCvae.yaml  config-supervised-vae.yaml
metrics/: metrics_kmeans.csv  visualisation_kmeans.ipynb
preprocess/: check_class_proportions.py  create_train_val_split.py  json_to_png.py  json_to_png_supervised_session.py  layers_counts.py  reduced_dataset.py  scale.py  split_by_width.py
sain code/: data.py  loss.py  main.py  optim.py
sain code/models/: __init__.py  vae_models.py
src/torchtmpl/: __init__.py  data.py  latent_metrics.py  loss.py  main.py  optim.py  utils.py  vizualisation.py
src/torchtmpl/models/: __init__.py  __main__.py  vae_models.py
