[project]
name = "torchtmpl"
version = "0.0.1"

dependencies = [
    "PyYAML>=6.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchinfo>=1.7.2",
    "scipy>=1.10.1",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.1",
    "scikit-learn",
    "umap-learn",
    "tensorboard>=2.12.0",
    "torchmetrics",
    "plotly>=5.0.0"
]

[options]
package_dir = "torchtmpl"
